# Nightfall

./: main.py  pyproject.toml  server.py
client/: client_predictor.py  config.py  enums.py  game_client.py  input_handler.py  main.py  pygame_client.py  renderer.py  ui_manager.py
data/: city_layout.txt  initial_state.json
nightfall/client/: asset_manager.py  config_ui.py  game_client.py  input_handler.py  main.py  network_client.py  renderer.py  ui_manager.py
nightfall/client/ui/components/: base_component.py  panel_component.py  queue_components.py
nightfall/core/actions/: action.py  city_actions.py
nightfall/core/common/: datatypes.py  enums.py  game_data.py
nightfall/core/components/: city.py  map.py  player.py
nightfall/core/engine/: simulator.py
nightfall/core/state/: game_state.py
nightfall/server/: main.py
nightfall/server/data/: city_layout.txt  initial_state.json  map.txt  world.json
nightfall/server/data/city_layouts/: default_city.json
nightfall_engine/actions/: action.py  city_actions.py
nightfall_engine/common/: datatypes.py  enums.py  game_data.py
nightfall_engine/components/: city.py  map.py  player.py
nightfall_engine/engine/: simulator.py
nightfall_engine/state/: game_state.py
