[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nightfall"
version = "0.1.0"
description = "A multi-user turn-based strategy game server and client."
requires-python = ">=3.8"

[project.scripts]
# This creates the 'server' command that runs the main() function in server/main.py
server = "nightfall.server.main:main"
# This creates the 'client' command that runs the main() function in client/main.py
client = "nightfall.client.main:main"